--- a/browser/templates/generator.html
+++ b/browser/templates/generator.html
@@ -1,19 +1,4 @@
-<div class='form' ng-form name='form'>
-   <div class="form-group row">
-      <label class="col-sm-2">App Name</label>
-      <div class="col-sm-10">
-        <input type="input" name='appName' class="form-control" required id="appName" ng-model='app.name'>
-      </div>
-    </div>
-   <div class="form-group row">
-      <label class="col-sm-2" for='modelName'>Model Name</label>
-      <div class="col-sm-10">
-        <input type="input" name='modelName' class="form-control" required id="modelName" ng-model='app.model.name'>
-      </div>
-    </div>
-    <div class='form-group'>
-      <button ng-click='generate()' class='btn btn-primary' ng-disabled='form.$invalid'>Generate Angular App</button>
-      <button class='btn btn-warming' ng-click='reset()'>Reset</button>
-    </div>
+<div>
+    <form ng-submit='generate()' sf-schema="schema" sf-form="form" sf-model="app"></form>
 </div>
 <ui-view></ui-view>
