--- a/browser/templates/generated.html
+++ b/browser/templates/generated.html
@@ -1,9 +1,9 @@
 <div class='row'>
-  <div class='col-sm-6'>
+  <div class='col-xs-12 col-sm-6'>
     <pre hljs hljs-source='code'>
     {{ code }}
     </pre>
   </div>
-  <div class='col-sm-6'>
+  <div class='col-xs-12 col-sm-6'>
     <iframe srcdoc="{{html}}" style='width:100%;height:100%'></iframe>
   </div>
